ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rj-ecommerce-ingress
  namespace: rj-ecommerce-app
  annotations:
    kubernetes.io/ingress.class: "gce" # Directs GKE to create a GCE Load Balancer
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: tj-gateway-service
            port:
              number: 80
